--- a/index.html
+++ b/index.html
@@ -409,6 +409,27 @@
             </li>
           </ul>
         </div>
+        <form class="footer-subscribe">
+          <label for="email" class="footer-input-fill"
+            ><span class="footer-input-description">Subscribe</span>
+            <input
+              type="email"
+              name="user-email"
+              placeholder="E-mail"
+              required
+              class="footer-input-email"
+              id="email"
+          /></label>
+          <button type="submit" class="footer-subscribe-button">
+            Subscribe<svg
+              class="footer-subscribe-button-icon"
+              width="24"
+              height="24"
+            >
+              <use href="./images/sprite.svg.svg#subscribe"></use>
+            </svg>
+          </button>
+        </form>
       </div>
     </footer>
 
