--- a/index.html
+++ b/index.html
@@ -435,8 +435,8 @@
 
     <!-- BACKDROP -->
 
-    <div class="backdrop" data-modal>
-      <div class="modal is-hidden">
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
         <button type="button" class="modal-button" data-modal-close>
           <svg class="modal-button-icon" width="8" height="8">
             <use href="./images/sprite.svg.svg#icon-close-modal"></use>
